# couples-management

./: .coveragerc  .gitignore  README.md  TASKS.md  TASKS_ADMIN_UI.md  TODO.md  alembic.ini  docker-compose.yml  env.example  package.json  pyproject.toml  run_backend.sh  run_dev.sh  run_tests.py  task-list.mdc
Backend/: Dockerfile  README.md  check_admin.py  pyproject.toml  run_server.py  test_token_generator.py  view_logs.py
Backend/alembic/: env.py
Backend/alembic/versions/: 2025_05_28_1130-create_expenses_tables.py  2025_05_28_1301-a804ab06f387_create_auth_tables.py  2025_05_28_1317-be5f69bc92e9_add_password_history_table.py  2025_05_28_1428-add_user_role_and_admin_fields.py  2025_06_01_1241-75042fb02c73_add_payment_and_expense_share_payment_.py
Backend/app/: config.py  database.py  main.py
Backend/app/core/: templates.py
Backend/static/js/: expenses.js
Backend/templates/: join_household.html  placeholder.html
Backend/templates/admin/: base.html
Backend/templates/auth/: login.html  register.html
Backend/templates/expenses/: dashboard.html  household_selection_create.html
Backend/templates/modals/: invite_member.html  manage_members.html
Backend/templates/onboarding/: complete.html
Backend/templates/partials/: member_invitation_form.html
Backend/tests/: __init__.py  test_auth_routers_comprehensive.py  test_auth_routers_integration.py  test_auth_utils.py  test_core_routers.py  test_core_utils.py  test_expenses_services.py  test_health_router.py  test_main.py  test_user_service_comprehensive.py
Backend/tests/frontend/: __init__.py  conftest.py  test_all_endpoints.py  test_href_validation.py
Frontend/: AUTHENTICATION_GUIDE.md  AUTH_SETUP.md  BACKEND_VALIDATION_REQUIREMENTS.md  FRONTEND_TASKS.md  astro.config.mjs  astro.mdc  auth.config.ts  dev.sh  package.json  tailwind.config.mjs  tsconfig.json
Frontend/src/: env.d.ts  middleware.ts
Frontend/src/components/: SecureAuthDemo.tsx
Frontend/src/layouts/: AppLayout.astro  BaseLayout.astro
Frontend/src/lib/: api.ts
alembic/: env.py
alembic/versions/: 2025_05_28_1301-a804ab06f387_create_auth_tables.py  2025_05_28_1317-be5f69bc92e9_add_password_history_table.py  2025_05_28_1323-2a3eed298b83_add_token_blacklist_table.py  2025_05_31_1741-4eb4e454b292_create_expenses_tables_fix.py
app/: config.py  database.py  main.py
app/core/: logging.py  template_context.py
static/css/: styles.css
static/js/: expenses.js
templates/: base.html  home.html  join_error.html
templates/admin/: dashboard.html  unauthorized.html
templates/auth/: access_restricted.html  login.html  profile.html  register.html
templates/expenses/: dashboard.html  household_selection.html
templates/onboarding/: add_members.html  create_household.html  join_household.html  welcome.html
tests/: conftest.py  test_admin_router.py  test_auth_dependencies.py  test_auth_service_comprehensive.py  test_auth_services.py  test_base_service.py  test_core_models.py  test_core_security_comprehensive.py  test_expenses_api.py  test_expenses_models.py  test_expenses_services.py  test_jwt_system.py  test_main.py  test_password_security.py  test_payment_services.py  test_security_utils.py
tests/frontend/: README.md  conftest.py  test_all_endpoints.py  test_config.py  test_templates.py
(+205 files in other folders)
